AutoWire detected proxies during setup
And expose if we detected a proxy running this makes it easier
to see what is happening over the wire during development by
simply running `fiddler` or `mitmproxy`

This does require `mitmproxy` is not installed through `brew install mitmproxy`
but the actual binaries are used.

--- a/examples/Elastic.Ephemeral.Example/Elastic.Ephemeral.Example.csproj
+++ b/examples/Elastic.Ephemeral.Example/Elastic.Ephemeral.Example.csproj
@@ -9,7 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Elastic.Elasticsearch.Ephemeral\Elastic.Elasticsearch.Ephemeral.csproj"/>
+    <ProjectReference Include="..\..\src\Elastic.Elasticsearch.Ephemeral\Elastic.Elasticsearch.Ephemeral.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Elastic.Transport" Version="0.4.12" />
   </ItemGroup>
 
 </Project>
