--- a/src/Elastic.Elasticsearch.Managed/Elastic.Elasticsearch.Managed.csproj
+++ b/src/Elastic.Elasticsearch.Managed/Elastic.Elasticsearch.Managed.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net462</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net462</TargetFrameworks>
     <Description>
       Provides an observable ElasticsearchNode abstraction that can be used to wrap an elasticsearch process. 
       Also ships with an cluster abstraction that can start one or more ElasticsearchNode's
@@ -9,9 +9,7 @@
     <PackageTags>elastic,elasticsearch,cluster,observable,rx</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Proc" Version="0.9.0" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Elastic.Stack.ArtifactsApi\Elastic.Stack.ArtifactsApi.csproj" />
+    <PackageReference Include="Proc" Version="0.9.1" />
   </ItemGroup>
 </Project>
