--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,12 +26,12 @@ jobs:
         echo exit code $?
         git tag --list
           
-    # Install .NET version as mandated by global.json
+    # Install the dotnet version as mandated by global.json
     - uses: actions/setup-dotnet@v5
       with:
           global-json-file: global.json
           dotnet-version: |
-              10.x
+            10.x
       env:
         NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
         
