--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v5
       with:
         fetch-depth: 1
     - run: |
@@ -26,12 +26,12 @@ jobs:
         echo exit code $?
         git tag --list
           
-    # Install .NET version as mandated by global.json
-    - uses: actions/setup-dotnet@v4.1.0
+    # Install the dotnet version as mandated by global.json
+    - uses: actions/setup-dotnet@v5
       with:
           global-json-file: global.json
           dotnet-version: |
-              6.x
+            10.x
       env:
         NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
         
