--- a/src/Elastic.Elasticsearch.Ephemeral/Elastic.Elasticsearch.Ephemeral.csproj
+++ b/src/Elastic.Elasticsearch.Ephemeral/Elastic.Elasticsearch.Ephemeral.csproj
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net462;net8.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net462;net8.0;net10.0</TargetFrameworks>
     <Description>Provides an EphemeralCluster implementation that can download/bootstrap/run a throwaway customizable Elasticsearch cluster</Description>
     <PackageTags>elastic,elasticsearch,cluster,ephemeral</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="SharpZipLib" Version="1.4.2" />
+    <PackageReference Include="SharpZipLib" Version="1.4.2"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Elastic.Elasticsearch.Managed\Elastic.Elasticsearch.Managed.csproj" />
+    <ProjectReference Include="..\Elastic.Elasticsearch.Managed\Elastic.Elasticsearch.Managed.csproj"/>
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net462'">
-    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http"/>
   </ItemGroup>
 </Project>
