--- a/src/Elastic.Elasticsearch.Managed/Elastic.Elasticsearch.Managed.csproj
+++ b/src/Elastic.Elasticsearch.Managed/Elastic.Elasticsearch.Managed.csproj
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net462;net8.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net462;net8.0;net10.0</TargetFrameworks>
     <Description>
-      Provides an observable ElasticsearchNode abstraction that can be used to wrap an elasticsearch process. 
+      Provides an observable ElasticsearchNode abstraction that can be used to wrap an elasticsearch process.
       Also ships with an cluster abstraction that can start one or more ElasticsearchNode's
     </Description>
     <PackageTags>elastic,elasticsearch,cluster,observable,rx</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Elastic.Stack.ArtifactsApi\Elastic.Stack.ArtifactsApi.csproj" />
-    <PackageReference Include="Proc" Version="0.9.1" />
+    <ProjectReference Include="..\Elastic.Stack.ArtifactsApi\Elastic.Stack.ArtifactsApi.csproj"/>
+    <PackageReference Include="Proc" Version="0.11.0"/>
   </ItemGroup>
 </Project>
