--- a/src/Elastic.Elasticsearch.Xunit/Elastic.Elasticsearch.Xunit.csproj
+++ b/src/Elastic.Elasticsearch.Xunit/Elastic.Elasticsearch.Xunit.csproj
@@ -1,16 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net462;net8.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net462;net8.0;net10.0</TargetFrameworks>
     <IsPackable>True</IsPackable>
     <IsTestProject>False</IsTestProject>
     <Description>Provides an Xunit test framework allowing you to run integration tests against local ephemeral Elasticsearch clusters</Description>
     <PackageTags>elastic,elasticsearch,xunit,cluster,integration,test,ephemeral</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Nullean.Xunit.Partitions" Version="0.5.0" />
-    <PackageReference Include="xunit" Version="2.9.2" />
+    <PackageReference Include="Nullean.Xunit.Partitions" Version="0.10.0"/>
+    <PackageReference Include="xunit" Version="2.9.3"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Elastic.Elasticsearch.Ephemeral\Elastic.Elasticsearch.Ephemeral.csproj" />
+    <ProjectReference Include="..\Elastic.Elasticsearch.Ephemeral\Elastic.Elasticsearch.Ephemeral.csproj"/>
   </ItemGroup>
 </Project>
